--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     background-color: rgb(24, 24, 24);
     width: 100%;
-    
+
     display: grid;
     grid-template-rows: auto 1fr 1fr 1fr 1fr 1fr;
 }
@@ -65,12 +65,12 @@
     padding: 10px 0px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
 
 }
 .inputBox{
     display: flex;
-    align-content: flex-end;
+    align-items: center;
     justify-content: flex-end;
 }
 .editBox{
@@ -82,8 +82,9 @@
 .settingsInput{
     width: 100%;
     box-sizing: border-box;
-    border: 1px solid rgb(43, 43, 43);
+    border: solid 1px rgb(72, 72, 72);
     padding: 8px;
+    border-radius: 5px;
 }
 
 .settingsButtonsContainer{
@@ -94,11 +95,12 @@
     gap: 10px;
 }
 .settingsButton{
-    background-color: rgb(29, 29, 29);
+    background-color: rgb(32, 32, 32);
     width: 100%;
-    padding: 10px;
+    padding: 15px;
     border-radius: 5px;
     font-size: 14px;
+    border: solid 1px rgb(72, 72, 72);
 }
 .settingsLabel{
     width: 100%;
@@ -112,6 +114,9 @@
     width: 100%;
     height: 100%;
     gap: 10px;
+}
+.inputContent-profile {
+    background-color: #000000;
 }
 .profileContent{
     grid-row: 2/span 4;
@@ -167,7 +172,7 @@
 }
 .profilePictureButton{
     background-color: rgb(43, 43, 43);
-    width: 60%;
+    width: 70%;
     padding:16px;
     border-radius: 5px;
     grid-row: 7;
@@ -194,6 +199,10 @@
 .userInfo{
     padding-left: 6px;
 }
+.usernameEdit, .emailEdit, .passwordEdit {
+    padding: 10px;
+}
+
 @media only screen and (min-width: 600px){
     .profilePageWrapper{
         padding-left: 8%;
@@ -231,7 +240,7 @@
 @media only screen and (min-width: 600px) and (orientation: portrait){
     .profileContent{
         display: block;
-        
+
     }
     .profilePageWrapper{
         padding-left: 14%;
