--- a/CSS/awards.css
+++ b/CSS/awards.css
@@ -12,35 +12,36 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 14px;
   padding-top: 30px;
 }
 
 .award-item {
-    background-color: var(--color-black);
-    padding: 20px;
-    color: var(--color-white);
-    width: 100%;
-    height: 20vh;
+  background-color: var(--color-black);
+  padding: 20px;
+  color: var(--color-white);
+  width: 100%;
+  height: 23.5vh;
+  border-radius: 5px;
 }
 
 .emmys {
-    background-image: url('../images/emmys.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  background-image: url('../images/emmys.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .grammys {
-    background-image: url('../images/grammys.png');
-    background-size: contain;
-    background-position: right;
-    background-repeat: no-repeat;
+  background-image: url('../images/grammys.png');
+  background-size: contain;
+  background-position: right;
+  background-repeat: no-repeat;
 }
 
 .oscars {
-    background-image: url('../images/oscars.png');
-    background-size: contain;
-    background-position: right;
-    background-repeat: no-repeat;
+  background-image: url('../images/oscars.png');
+  background-size: contain;
+  background-position: right;
+  background-repeat: no-repeat;
 }
