--- a/CSS/group.css
+++ b/CSS/group.css
@@ -49,7 +49,8 @@
 }
 
 .add-group-members-grouppage p {
-  color: rgb(158, 158, 158);;
+  color: rgb(158, 158, 158);
+  font-size: 14px;
 }
 
 .tablet-result-history {
@@ -73,12 +74,17 @@
   display: flex;
   align-items: center;
   padding: 10px;
-  border-bottom: 1px solid var(--color-grey);
+  border-bottom: 1px solid var(--color-grey-1);
 }
 
 .rank-number,
 .user-in-rank div {
   color: var(--color-grey);
+  font-size: 14px;
+}
+
+.rank-username {
+  font-family: Sora SemiBold;
 }
 
 .group-text {
