--- a/CSS/index.css
+++ b/CSS/index.css
@@ -86,6 +86,7 @@ button {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
+  z-index: 8;
 }
 
 .popupContent {
@@ -102,6 +103,7 @@ button {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  z-index: 9;
 }
 
 .inputContent {
@@ -179,6 +181,11 @@ button {
   .mobile-backdrop {
     background: none;
   }
+
+  .popupContent{
+    width: 70vw;
+    height: 50vh;
+  }
 }
 
 @media only screen and (min-width: 600px) and (orientation: portrait) {
@@ -192,5 +199,9 @@ button {
     position: inherit;
     height: 50%;
     width: 50%;
+  }
+  .popupContent{
+    width: 80vw;
+    height: 40vh;
   }
 }
