--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -53,7 +53,7 @@
 }
 
 .profileName {
-    justify-self: center;
+    font-family: Sora SemiBold;
     align-self: center;
 }
 
@@ -70,15 +70,17 @@
 .betButton {
     flex-grow: 1;
     text-align: center;
+    font-size: 14px;
     border-bottom: 3px solid rgb(43, 43, 43);
     padding: 10px;
+    font-family: Sora SemiBold;
 }
 
 .settingsContainer {
     padding: 10px 0px;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 8px;
 
 }
 
@@ -86,6 +88,12 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    font-size: 14px;
+}
+
+.inputBox div,
+.inputBox span {
+    color: var(--color-grey-4);
 }
 
 .editBox {
@@ -166,7 +174,7 @@
 }
 
 .settingsContentWrapper>h2 {
-    padding: 30px 0 10px 0px;
+    padding-bottom: 10px;
     font-size: 22px;
     font-family: Sora SemiBold;
 }
@@ -174,6 +182,7 @@
 .chosenAward {
     position: relative;
     color: var(--color-orange);
+    font-family: Sora SemiBold;
 }
 
 .chosenAward::before {
@@ -209,9 +218,12 @@
     padding: 16px;
     border-radius: 5px;
     text-align: center;
+    font-family: Sora SemiBold;
+    font-size: 14px;
+    color: var(--color-grey-4);
 }
 
-.profilePictureCancel{
+.profilePictureCancel {
     grid-row: 7;
 }
 
@@ -221,7 +233,7 @@
     grid-template-rows: 1fr 1fr 1fr 1fr 0.5fr 1.5fr 1.5fr 1fr;
 }
 
-.PPbuttonContainer{
+.PPbuttonContainer {
     grid-row: 7;
     display: flex;
     gap: 20px;
@@ -241,6 +253,8 @@
     border-radius: 5px;
     padding: 10px 20px;
     align-self: flex-end;
+    font-size: 14px;
+    font-family: Sora SemiBold;
 }
 
 .userInfo {
@@ -329,5 +343,31 @@
     .responsiveContainer {
         display: flex;
         flex-direction: column;
+    }
+
+    .betButton {
+        font-size: 16px;
+    }
+
+    .betHeader {
+        font-size: 16px;
+    }
+
+    .profilePicture {
+        width: 10vh;
+    }
+
+    .profilePicAndName {
+        margin-bottom: 10vh;
+        margin-top: 3vh;
+    }
+
+    .backgroundPictureProfile {
+        height: 25vh;
+    }
+
+    .myBets {
+        /*! margin: -5vh 0; */
+        margin-top: -3vh;
     }
 }
