--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -4,9 +4,14 @@
 }
 
 .goldenbet {
-  display: none;
-  padding: 100px 0 0 100px;
-  margin: 0;
+    display: none;
+    padding: 100px 0 0 100px;
+    margin: 0;
+}
+
+.web-title {
+    font-family: Sora SemiBold;
+    font-size: 20px;
 }
 
 .blurred-background-welcome {
@@ -15,7 +20,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent), linear-gradient(to bottom, rgba(30, 87, 153, 0.4), transparent),url('../images/bg-welcome.png');
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent), linear-gradient(to bottom, rgba(30, 87, 153, 0.4), transparent), url('../images/bg-welcome.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -33,9 +38,14 @@
     gap: 20px;
 }
 
+.welcome-content>h1:nth-child(1) {
+    font-family: Sora SemiBold;
+}
+
 .welcome-content p {
-    color: #9E9E9E;
+    color: var(--color-grey-5);
     padding: 0 20px;
+    font-size: 16px;
 }
 
 .welcome-buttons {
@@ -60,7 +70,7 @@
     .goldenbet {
         display: block;
         z-index: 2;
-      }
+    }
 
     .web-title {
         display: none;
