--- a/CSS/index.css
+++ b/CSS/index.css
@@ -97,7 +97,7 @@ button {
   padding: 20px;
   box-sizing: border-box;
   transform: translate(-50%, -50%);
-  height: 40vh;
+  min-height: 40vh;
   width: 90%;
   display: flex;
   align-items: center;
