--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -145,6 +145,8 @@
 
 .inputContent-profile {
     background-color: #000000;
+    padding: 15px;
+    min-height: 40vh;
 }
 
 .profileContent {
@@ -193,10 +195,8 @@
     left: 0;
     width: 100%;
     height: 3px;
-    /* Adjust the thickness of the bottom border */
     background-color: var(--color-orange);
     box-shadow: 0 0 10px rgba(255, 165, 0, 0.5);
-    /* Adjust the glow effect */
 }
 
 .betContainer {
@@ -228,7 +228,7 @@
 }
 
 #profilePictureForm {
-    width: 70%;
+    width: 100%;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr 0.5fr 1.5fr 1.5fr 1fr;
 }
