--- a/CSS/home.css
+++ b/CSS/home.css
@@ -101,6 +101,10 @@
     font-size: 14px;
 }
 
+.home-logout-button {
+    visibility: hidden;
+}
+
 /* tablet portrait */
 @media only screen and (min-width: 600px) {
     .home-content {
